# oilgas-etl

./: .gitignore  README.md  dir_layout.md  pyproject.toml
config/: categories.toml  settings.toml
memory/: current.md  edge-cases.md  project.md
sql/: 001_reference.sql  002_documents.sql  003_revenue.sql  004_jib.sql  schema.sql  views.sql
src/oilgas/: classifier.py  cli.py  config.py  database.py  debug.py  document.py  hashing.py
src/oilgas/extractors/: models.py  pdf.py
src/oilgas/geometry/: models.py  spatial.py
src/oilgas/layout/: __init__.py  layout.py  models.py  rows.py
src/oilgas/mappers/: revenue.py
src/oilgas/models/: header.py  jib.py  parser.py  revenue.py
src/oilgas/parsers/: columns.py  header.py  jib.py  parser_models.py  product.py  property.py  property_headers.py  revenue.py  revenue_line.py
src/oilgas/repositories/: base.py  database.py  jib.py  revenue.py
src/oilgas/scripts/: export_to_excel.py
src/oilgas/util/: dates.py  hashing.py  numbers.py  strings.py  text.py
tests/: test_dates.py  test_jib_parser.py  test_jib_repository.py  test_numbers.py  test_product_parser.py  test_revenue_line_parser.py  test_revenue_parser_pagebreak.py  test_revenue_repository.py  test_revenue_statement_totals.py
