[project]
name = "oilgas-etl"
version = "0.1.0"
description = "EnergyLink PDF parser and DuckDB ETL pipeline for oil & gas working interest accounting."
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Travis Vaught" }
]

license = { text = "MIT" }

dependencies = [
    "duckdb>=1.4.0",
    "pymupdf>=1.26.0",
    "pdfplumber>=0.11.7",
    "pydantic>=2.11.0",
    "typer>=0.17.0",
    "rich>=14.1.0",
    "pandas>=2.3.0",
    "python-dateutil>=2.9.0",
    "platformdirs>=4.3.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "ruff>=0.12",
    "mypy>=1.17",
    "ipython>=9.4",
    "jupyterlab>=4.4",
]

[project.scripts]
oilgas = "oilgas.cli:app"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oilgas"]
